# NYC-YELLOW-TAXI-MLOPS

./: .dockerignore  .env.bak  .gitignore  Dockerfile.airflow  Dockerfile.inference  Dockerfile.spark  Makefile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  setup_airflow.sh  test.ipynb
.github/workflows/: ci.yml
airflow/dags/: .gitkeep  README.md  dag_utils.py  data_refresh_dag.py  etl_pipeline.py  model_retrain_dag.py
docs/: 01-project-overview.md  02-data-pipeline.md  03-ml-pipeline.md  04-inference-and-monitoring.md  05-aws-deployment.md
monitoring/grafana/dashboards/: inference.json
monitoring/prometheus/: prometheus.yml
src/: data_ingestion.py  data_preprocessing.py  data_transformation.py  data_validation.py  drift_detection.py  ml_transformed.py  model_evaluation.py  model_registry.py  model_training.py
src/config/: config.py  settings.yaml
src/hpo/: champion.json  config_mlflow.yaml  config_schema.py  mlflow.py
src/inference/: README.md  __init__.py  app.py  feature_pipeline.py  locustfile.py  model_loader.py
src/inference/templates/: index.html
src/mlflow/: champion.json  config_mlflow.yaml  config_schema.py  mlflow.py
src/models/: model_factory.py
src/utils/: base_pipeline.py  drift_gate.py  io_utils.py  metrics.py  mlflow_auth.py  mlflow_client.py  mlflow_pyfunc.py  quality_gate.py  spark_utils.py
tests/: conftest.py  test_config.py  test_dag_utils.py  test_drift_gate.py  test_io_utils.py  test_metrics.py  test_model_factory.py  test_quality_gate.py
